bad/assign_method_call_class_void.example_compiler_output
ERROR
[1mbad/assign_method_call_class_void.lat:10:16: [1;31merror: [0;1mleft side is not assignable[m
	(new M).foo() = vfunc();
	              [1;32m^[m
[1mbad/assign_method_call_class_void.lat:10:2: [1;34mnote: [0;1mleft side starts here[m
	(new M).foo() = vfunc();
	[1;32m^[m
